feat: Enhance authentication and environment setup
- Added new environment variables to .env for Discord integration.
- Refactored authRouter.js to include a development login route.
- Updated discordRouter.js to unify logout handling.
- Improved passport-discord.js to support development bypass for testing.
- Refactored factRepository.js to use ESM imports and export functions.
- Updated knexfile.js and schema.js to use ESM format.
- Created api.js for centralized API endpoint handling.
- Enhanced main.js for dynamic loading of environment variables.
- Removed unused mmm.js file.
- Updated package.json to ensure module type is set.
- Adjusted yarn.lock for dependency updates and architecture changes.

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+DISCORD_GUILD_ID=2333
+DISCORD_CLIENT_ID=your_bot_client_id
+DISCORD_CLIENT_SECRET=your_bot_secret
+DISCORD_CALLBACK_URL=https://yourdomain/auth/discord/callback
+DISCORD_ROLE_ID=12345    # (optional)
+
 DEV_MODE=TRUE
 PORT= 16261
