--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DISCORD_CLIENT_SECRET=your_bot_secret
 DISCORD_CALLBACK_URL=https://yourdomain/auth/discord/callback
 DISCORD_ROLE_ID=12345    # (optional)
 
-DEV_MODE=TRUE
+DEV_LOGIN_MODE=TRUE
 PORT= 16261
