feat: update light theme colors and add button styles
fix: comment out rate limiting middleware for debugging

chore: update package dependencies and add FontAwesome support

docs: fix typo in README regarding app accessibility

feat: implement new search endpoint for facts with enhanced parameters

refactor: improve logging and content security policy in static router

fix: remove unnecessary log statement in suspicious activity logging

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@ vite.config.ts.timestamp-*
 # nohup output file
 nohup.out
 Fabs Fact Database - Facts_Input-1.csv
+# React Component Preview
+previewConfig.json
