--- a/fact_index/package.json
+++ b/fact_index/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -45,14 +48,26 @@
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/transformer-sass": "^2.15.4",
     "@parcel/transformer-webmanifest": "^2.15.4",
+    "assert": "^2.1.0",
     "babel-jest": "^27.4.2",
     "babel-preset-react-app": "^10.0.1",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
+    "events": "^3.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-watch-typeahead": "^1.0.0",
-    "sass": "^1.89.2"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "sass": "^1.89.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
   },
   "source": "public/index.html"
 }
