--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "body-parser": "^2.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^17.0.1",
