--- a/fact_index/package.json
+++ b/fact_index/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "fact_index",
   "version": "0.1.0",
   "private": true,
@@ -6,14 +7,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tanstack/react-query": "^5.82.0",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@jespers/eslint-plugin-css-modules": "^0.2.0",
+    "@parcel/transformer-postcss": "^2.15.4",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@tanstack/react-query": "^5.83.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "cssnano": "^7.1.0",
+    "eslint-plugin-css-modules": "^2.12.0",
     "express-session": "^1.18.1",
     "parcel": "^2.15.4",
     "react": "^19.1.0",
@@ -26,13 +34,11 @@
     "start": "parcel",
     "build": "parcel build",
     "test": "jest",
-    "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,scss,json,md}'",
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx,.scss",
+    "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx,.scss --fix",
+    "stylelint": "stylelint 'src/**/*.{css,scss}'",
+    "stylelint:fix": "stylelint 'src/**/*.{css,scss}' --fix"
   },
   "browserslist": {
     "production": [
@@ -47,26 +53,54 @@
     ]
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.31.0",
     "@parcel/packager-raw-url": "^2.15.4",
     "@parcel/transformer-sass": "^2.15.4",
     "@parcel/transformer-webmanifest": "^2.15.4",
-    "assert": "^2.1.0",
-    "babel-jest": "^27.4.2",
-    "babel-preset-react-app": "^10.0.1",
+    "@parcel/validator-eslint": "^2.15.4",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "babel-jest": "^27.5.1",
+    "babel-preset-react-app": "^10.1.0",
     "browserify-zlib": "^0.2.0",
+    "check-unused-css": "^0.1.6",
+    "console-browserify": "^1.2.0",
     "crypto-browserify": "^3.12.1",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "events": "^3.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
-    "jest-watch-typeahead": "^1.0.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-css": "^0.11.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sonarjs": "^3.0.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^16.3.0",
+    "jest": "^27.5.1",
+    "jest-watch-typeahead": "^1.1.0",
     "path-browserify": "^1.0.1",
+    "postcss-scss": "^4.0.9",
+    "postcss-styled-syntax": "^0.7.1",
+    "prettier": "^3.6.2",
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "sass": "^1.89.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "stylelint": "^16.21.1",
+    "stylelint-config-sass-guidelines": "^12.1.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-no-unused-selectors": "^1.0.40",
+    "stylelint-prettier": "^5.0.3",
+    "stylelint-scss": "^6.12.1",
+    "typed-scss-modules": "^8.1.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0",
     "url": "^0.11.4",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
